[package]
name = "usrsctp-sys"
version = "0.1.0"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Bindings for the `usrsctp` library, providing SCTP networking."
keywords = ["sctp", "network", "networking"]
homepage = "https://github.com/endoli/usrsctp.rs"
repository = "https://github.com/endoli/usrsctp.rs"
documentation = "https://endoli.github.io/usrsctp.rs/"
categories = ["external-ffi-bindings", "network-programming"]

links = "usrsctp"
build = "build.rs"

[badges]
travis-ci = { repository = "endoli/usrsctp-sys.rs", branch = "master" }

[dependencies]
libc = "0.2.36"

[build-dependencies]
cmake = "0.1"
